--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -7,18 +7,18 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Backend/Backend.csproj", "Backend/"]
+COPY ["Frontend/Frontend.csproj", "Frontend/"]
 COPY ["Shared/Shared.csproj", "Shared/"]
-RUN dotnet restore "Backend/Backend.csproj"
+RUN dotnet restore "Frontend/Frontend.csproj"
 COPY . .
-WORKDIR "/src/Backend"
-RUN dotnet build "Backend.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Frontend"
+RUN dotnet build "Frontend.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Backend.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Frontend.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Backend.dll"]
+ENTRYPOINT ["dotnet", "Frontend.dll"]
