--- a/Frontend/wwwroot/appsettings.Development.json
+++ b/Frontend/wwwroot/appsettings.Development.json
@@ -6,5 +6,5 @@
             "Microsoft": "Information"
         }
     },
-    "BackendUrl": "http://backend:5092/api/"
+    "BackendUrl": "http://localhost:5092/api/"
 }
